[workspace]

members = [
    "libs/megadrive-sys",
    "libs/megadrive-input",
    "libs/megadrive-graphics",
    "libs/megadrive-alloc",
    "tools/cargo-megadrive",
    "examples/megapong",
    "examples/megacoinflip",
]

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
