[package]
name = "megatowerdefense"
version = "0.1.0"
authors = ["Rein van 't Veer <rein@vantveer.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
lock_api = "=0.4.3"  # Pin to this version for it to work with Rust 1.53-dev
linked_list_allocator = { version = "0.9", default-features = false, features = ["use_spin_nightly"] }
megadrive-sys = { path = "../../libs/megadrive-sys" }
megadrive-input = { path = "../../libs/megadrive-input" }
megadrive-graphics = { path = "../../libs/megadrive-graphics" }
