[package]
name = "megadrive-graphics"
description = "Higher-level rendering library for the Sega Mega Drive (Genesis)"
version = "0.1.0"
authors = ["Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"
homepage = "https://github.com/ricky26/rust-mega-drive"
repository = "https://github.com/ricky26/rust-mega-drive"
keywords = ["megadrive", "gamedev"]
categories = ["embedded", "game-development", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
megadrive-sys = { path = "../megadrive-sys" }
