[package]
name = "megadrive-input"
description = "Higher-level support for input devices on the Mega Drive"
version = "0.1.0"
authors = ["Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
megadrive-sys = { path = "../megadrive-sys" }
