[package]
name = "megadrive-sys"
description = "Bindings to the Sega Mega Drive (Genesis) hardware."
version = "0.1.0"
authors = ["Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/ricky26/rust-mega-drive"
repository = "https://github.com/ricky26/rust-mega-drive"
keywords = ["megadrive", "gamedev"]
categories = ["embedded", "game-development", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
