[package]
name = "megadrive-util"
description = "Miscellaneous functions, structures and traits useful for development on the Sega Mega Drive (Genesis)"
version = "0.1.0"
authors = ["reinvantveer <rein@vantveer.me>", "Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ricky26/rust-mega-drive"
repository = "https://github.com/ricky26/rust-mega-drive"
keywords = ["megadrive", "gamedev"]
categories = ["embedded", "game-development", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
megadrive-graphics = { path = '../megadrive-graphics' }
megadrive-sys = { path = '../megadrive-sys' }
