[package]
name = "cargo-megadrive"
version = "0.1.0"
authors = ["Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
cargo-manifest = "0.2.3"
cargo_metadata = "0.12.3"
clap = "3.0.0-beta.2"
duct = "0.13.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
toml = "0.5.8"
